# graduation-proj

heternoym-client/: package.json  svelte.config.js
heternoym-client/src/lib/: api.ts  client.ts
heternoym-client/src/lib/components/: HostCard.svelte  Label.svelte  Modal.svelte  TorchModelManager.svelte
heternoym-client/src/lib/components/layer-selection/: AutoSelectStrategy.svelte  ConfigForm.svelte  (+7 more)
heternoym-client/src/lib/persist/: persist.ts
heternoym-client/src/routes/: +layout.svelte  +page.svelte
heteronym/: .env  .gitignore  example.db  pyproject.toml
heteronym/src/heteronym/: config.py  main.py
heteronym/src/heteronym/offload/: registry.py  registry_dist.py  registry_sync.py  setup.py  setup_config.py  setup_dist.py
heteronym/src/heteronym/offload/auto/: generate_offload_modules.py  registry.py  setup.py
heteronym/src/heteronym/scanner/: get_leaf_module_names.py  get_module_lists.py  logger.py  scan.py  scan_compute_time.py  scan_memory.py  scan_onload_time.py  scan_result.py  scan_usage_order.py
heteronym/src/heteronym/server/: auth.py  logger.py  main.py
heteronym/src/heteronym/server/db/: client.py
heteronym/src/heteronym/server/router/: __init__.py  deploy_router.py  example_generator.py  offload_config_router.py  scanner_router.py  strategy_generator_router.py  torch_model_router.py
heteronym/src/heteronym/server/router/deploy/: lm.py  t2i.py  t2v.py
heteronym/src/heteronym/strategy/: __init__.py  genetic.py  gradient.py  greedy.py  main.py
heteronym/src/heteronym/util/: logger.py
heteronym/tests/: test_scan.py
(+9 files in other folders)
